# Skidibidibop

./: .gitignore  LICENSE  README.md
data/: CMakeLists.txt  README.md  test.txt
data/builder/: data_default_builder.cpp  default_builder.cpp
data/include/: data.h  data_default_builder.h  data_parser.h  data_save.h  data_types.h
data/lib/: libsbbdata.so.0.0.0
data/parser/: data_parser.cpp  parser.cpp
data/res/: test.txt
data/src/: data.h  data_parser.cpp  data_parser.h  data_save.cpp  data_save.h  data_types.cpp  data_types.h  parser.cpp  tester.cpp
docs/: blog.html  index.html
docs/_includes/: head.html  nav.html
docs/_layouts/: default.html  post.html
docs/_posts/: 2020-11-16-first-post.md  2020-11-26-fixing-cpu-usage.md
docs/_sass/: _blog.scss  _general.scss  _nav.scss  _post.scss
docs/assets/css/: main.scss
editor/: CMakeLists.txt  README.md
editor/src/: constants.h  main.cpp
editor/src/confirmation/: confirmation.cpp  confirmation.h  confirmation_bool.cpp  confirmation_bool.h  confirmation_string.cpp  confirmation_string.h
editor/src/tools/: tool.cpp  tool.h  tool_main.cpp  tool_main.h  tool_manager.cpp  tool_manager.h  tool_tab.cpp  tool_tab.h  tool_tile.cpp  tool_tile.h
editor/src/utility/: utility.cpp  utility.h
editor/src/window/: window.cpp  window.h  window_inputs.h
ffm/: README.md
ffm/builder/: CMakeLists.txt  README.md
ffm/builder/src/: main.cpp
ffm/chunk_editor/: CMakeLists.txt  README.md
ffm/chunk_editor/src/: constants.h  main.cpp
ffm/chunk_editor/src/confirmation/: confirmation.cpp  confirmation.h  confirmation_bool.cpp  confirmation_bool.h  confirmation_string.cpp  confirmation_string.h
ffm/chunk_editor/src/tools/: tool.cpp  tool.h  tool_collisions.cpp  tool_collisions.h  tool_main.cpp  tool_main.h  tool_manager.cpp  tool_manager.h  tool_monsters.cpp  tool_monsters.h  tool_npcs.cpp  tool_npcs.h  tool_objects.cpp  tool_objects.h  tool_tab.cpp  tool_tab.h
ffm/chunk_editor/src/utility/: utility.cpp  utility.h
ffm/chunk_editor/src/window/: window.cpp  window.h  window_inputs.h
ffm/data/: CMakeLists.txt  README.md
ffm/data/include/: ffm_data.h  ffm_data_types.h
ffm/data/src/: ffm_data_types.cpp
game/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  compile_commands.json  ffmdata.exp  ffmdata.lib  game.sln  game.vcxproj  game.vcxproj.filters  log  log.txt  sbbdata.lib  sdlw.lib
game/.clangd/index/: core.cpp.7E25C98735CA1CFD.idx  core.h.9CBD2EF5C405101D.idx  main.cpp.18A073B2B70EABD2.idx  sdl.h.96518C8F793DC706.idx  window.cpp.2C01808882ADC8DB.idx  window.h.C28185B54148953F.idx
game/Win32/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
game/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
game/game.dir/Debug/: game.exe.recipe
game/game.dir/Debug/game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
game/plugins/: plugin.cpp  plugin.h  plugins.h
game/plugins/audio/: audio.cpp  audio.h
game/res/: map.ffmfd
game/res/chunk_images/: 1.png~  7.png~
game/src/: constants.h  main.cpp
game/src/core/: camera.h  core.cpp  core.h  core_inputs.h  core_manager_manager.cpp  core_manager_manager.h  core_object.cpp  core_object.h  core_object_manager.cpp  core_object_manager.h  core_states.h  input.h  scene.cpp  scene.h
game/src/ecs/: component.h  entity.cpp  entity.h
game/src/ecs/components/: animation_component.cpp  animation_component.h  camera_component.cpp  camera_component.h  collision_component.cpp  collision_component.h  component.cpp  component.h  direction_component.cpp  direction_component.h  line_component.cpp  line_component.h  physics_component.cpp  physics_component.h  projectile_component.cpp  projectile_component.h  projectile_def_component.cpp  projectile_def_component.h  render_component.cpp  render_component.h  transform_component.cpp  transform_component.h  weapon_component.cpp  weapon_component.h
game/src/ecs/systems/: animation_system.cpp  animation_system.h  camera_system.cpp  camera_system.h  collision_system.cpp  collision_system.h  inventory_system.cpp  inventory_system.h  line_debug_system.cpp  line_debug_system.h  map_system.cpp  map_system.h  menu_system.cpp  menu_system.h  physics_system.cpp  physics_system.h  projectile_system.cpp  projectile_system.h  render_system.cpp  render_system.h  system.cpp  system.h  weapon_system.cpp  weapon_system.h
game/src/logger/: logger.cpp  logger.h
game/src/map/: map.cpp  map.h  tile.cpp  tile.h
game/src/player/: player_manager.cpp  player_manager.h  player_object.cpp  player_object.h
game/src/scenes/: test_scene.cpp  test_scene.h  title_scene.cpp  title_scene.h
game/src/sdl/: renderer.cpp  renderer.h  sdl.h  texture.cpp  texture.h  window.cpp  window.h
sdlw/: CMakeLists.txt  README.md
sdlw/include/: sdlw.h  sdlw_renderer.h  sdlw_texture.h  sdlw_window.h
sdlw/src/: sdlw_renderer.cpp  sdlw_texture.cpp  sdlw_window.cpp
site/_layouts/: default.html
